- Updated - Admin plugins manager will now maintain state on tab change
- Updated - Theme upgrade routines will now run after_switch_theme, once
- Updated - Offload gutenberg extra formatting to own installable module
- Updated - Style components are now cached and enqueued in admin/editor
- Updated - Update underlined word for latest posts and testimonial patterns
- Fixed - core/social-links missing social networks services colors
- Fixed - Issue with generated classname for inline styles for selectors that contains ","
- Fixed - Issue with buttons auto text color based on background lightness
- Fixed - Issue with group marquee styles for hover state
- Added - New testimonial cards pattern
- Added - New Tooltip component styles (to be used on modules and other places)
- Added - New Popover component styles (to be used on modules and other places)
- Added - core/social-links sharing variation
- Added - core/social-link sharing variation (for common social networks)
- Added - Social sharing block pattern / used on single page
- Added - New theme ability to install modules (similar to plugins but as in the theme itself)

v6.2.8
- Updated - core/embed styles to css custom variable
- Updated - core/column add is-stacked-on-mobile class / data-columns HTML attribute
- Updated - core/column add support for border radius
- Updated - core/query-pagination-numbers markup and styles improved / to be used in backend
- Updated - box shadow presets styles
- Updated - blur backdrop-filter for modal style component
- Updated - use default categories and add/rename Pages (for full pages), Elements (for small elements), WeCodeArt (all from theme)
- Updated - fix pattern images with new inline style attribute
- Updated - main header/footer template part to pattern (to make use of php/translation)
- Added - core/list various icons styles
- Added - core/image lightbox support
- Added - lightbox for wecodeart( 'styles' )->Components to be loaded on demand